# freegie

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  freegie-tray.desktop  freegie-tray.desktop.in  install.sh  justfile  pyproject.toml  requirements.txt
docs/: DESIGN.md  SPEC.md  STATE_MACHINE.md
freegie/: __main__.py  battery.py  ble.py  cli.py  config.py  engine.py  protocol.py  server.py  tray.py
freegie/static/: app.js  index.html  styles.css
systemd/: freegie-tray.service  freegie-tray.service.in  freegie.service  freegie.service.in
tests/: conftest.py  test_battery.py  test_ble.py  test_cli.py  test_config.py  test_engine.py  test_integration.py  test_protocol.py  test_server.py
