[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freegie"
version = "0.1.0"
description = "Open-source charge management daemon for Chargie hardware"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Greg Gradwell" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Power (UPS)",
]
dependencies = [
    "bleak>=0.21.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
tray = ["pystray>=0.19.0", "Pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[project.urls]
Repository = "https://github.com/greghgradwell/freegie"

[project.scripts]
freegie = "freegie.__main__:main"
freegie-tray = "freegie.tray:main"

[tool.setuptools.packages.find]
include = ["freegie*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["chargie: requires Chargie hardware"]
